--- a/css/backup.css
+++ b/css/backup.css
@@ -1,196 +1,130 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-body{
+body {
 	background-image: radial-gradient(circle at 120.71% 50%, #feffff 0, #b5c9f2 50%, #6495dd 100%);
-}
-.linea{
-	border-top: 1px solid rgb(0, 0, 0);
-    height: 2px;
-    max-width: 90%;
-    padding: 0;
-    margin: 50px auto 0 auto;
-}
-.nav__imagen{
-	width: 74px;
-	height: 50px;
-	margin-right: 10px;
-}_
-/*--------------------Fin del header--------------------*/
-.articulo{
+  }
+  body .articulo {
 	padding-top: 30px;
 	padding-right: 74px;
 	padding-left: 74px;
 	border-radius: 10px;
-}
-.articulo__titulo{
+  }
+  body .articulo .articulo__titulo {
 	margin: 30px 40px 0 40px;
 	padding: 10px;
 	display: inline-block;
 	border-radius: 10px;
 	margin-bottom: 40px;
 	background-color: rgba(255, 255, 255, 0.4);
-}
-.titulo{
-	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  }
+  body .articulo .articulo__titulo .titulo {
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 	font-size: 30px;
-}
-.articulo__equipo{
-	padding: 0 40px 0 40px;
+  }
+  @media only screen and (max-width: 450px) {
+	body .articulo .articulo__titulo .titulo {
+	  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+	  font-size: 21px;
+	}
+  }
+  @media only screen and (max-width: 450px) {
+	body .articulo .articulo__titulo {
+	  background-color: rgba(255, 255, 255, 0.7);
+	  margin-top: 20px;
+	  margin-bottom: 15px;
+	  font-size: 15px;
+	}
+  }
+  body .articulo .articulo__equipo {
+	padding: 0 20px 0 20px;
 	display: flex;
 	flex-direction: column;
-}
-.articulo__imagen{
-	border-radius: 20px ;
-	width: auto;
-	margin-top:40px ;
-	margin-bottom: 40px;
-}
-.articulo__texto{
+  }
+  @media only screen and (max-width: 450px) {
+	body .articulo .articulo__equipo {
+	  padding: 0 10px 0 10px;
+	}
+  }
+  body .articulo .articulo__equipo .articulo__texto {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 20px;
 	text-align: justify;
 	border-radius: 5px;
 	background-color: rgba(0, 0, 0, 0.1);
 	padding: 30px;
-}
-@media only screen and (max-width:450px) {
-	.nav-link:hover{
-		color: black;
+  }
+  @media only screen and (max-width: 450px) {
+	body .articulo .articulo__equipo .articulo__texto {
+	  background-color: rgba(0, 0, 0, 0.05);
+	  text-align: justify;
+	  font-size: 14px;
+	  padding: 10px;
 	}
-	.articulo{
-		border-radius: 10px;
-		padding-top: 0px;
-		padding-bottom: 15px;
-		background-color: #6495dd;
+  }
+  body .articulo .articulo__equipo .articulo__imagen {
+	border-radius: 20px;
+	width: auto;
+	margin-top: 40px;
+	margin-bottom: 40px;
+  }
+  @media only screen and (max-width: 450px) {
+	body .articulo .articulo__equipo .articulo__imagen .articulo__imagen {
+	  margin-top: 15px;
+	  margin-bottom: 15px;
 	}
-	.titulo{
-		font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-		font-size: 21px;
+  }
+  @media only screen and (max-width: 450px) {
+	body .articulo {
+	  padding-right: 14px;
+	  padding-left: 14px;
+	  border-radius: 10px;
+	  padding-top: 1px;
+	  padding-bottom: 15px;
+	  background-color: #6495dd;
 	}
-	
-	.articulo__titulo{
-		background-color: rgba(255, 255, 255, 0.7);
-		margin-top: 20px;
-		margin-bottom: 15px;
-		font-size: 15px;
-	}
-	.articulo__imagen{
-		margin-top: 15px;
-		margin-bottom: 15px;
-	}
-	.articulo__texto{
-		background-color: rgba(0, 0, 0, 0.05);
-		text-align: justify;
-		font-size: 14px;
-		padding: 10px;
-	}
-	.nav__imagen{
-		display: none;
-	}
-}
-/* Css de la pagina formaciones.html */
-.formacion{
-	width: 1100px;
-	margin:1px 125px;
-	border-radius: 50px;
-}
-.formacion__texto{
-	margin: 110px 120px 30px 120px;
-	background-color:rgba(255, 255, 255, 0.4);
-	border-radius: 10px;
-	padding: 10px;
-	font-size: 40px;
-}
-/*.seccion{
-	padding: 20px;
-	margin-top: 74px;
-	display: grid;
-	grid-template-rows: repeat(3, 1fr);
-	grid-template-columns: repeat(3, 1fr);
-	column-gap: 90px;
-    row-gap: 10px;
-}*/
-.seccion__jugadores {
-	color: rgba(0, 0, 0, 0);
-    /*border: solid 2px #4F091D;
-    background-color: #97BFB4;
-    padding: 30px;
-    text-align: center;*/
-}
-
-/* Css de la pagina indumentaria.html */
-.seccion__indumentaria{
-	padding: 50px;
-	display: grid;
-	grid-template-rows: repeat(2, 1fr);
-	grid-template-columns: repeat(3, 1fr);
-	column-gap: 90px;
-    row-gap: 10px;
-	margin: 50px;
-	background-color: rgba(0, 0, 0, 0.3);
-	border-radius: 30px;
-}
-.titulo__ropa{
+  }
+  
+  /* scss de la pagina de estadios.html */
+  .titulo__estadios {
 	background-color: rgba(255, 255, 255, 0.4);
 	margin-top: 74px;
 	padding: 60px;
 	font-size: 40px;
-}
-.indumentaria{
-	position:relative;
-}
-.indumentaria__imagen{
-	width: 300px;
-}
-.julian{
-	height: 350px;
-}
-.indumentaria__titulo{
-	position: relative;
-	bottom: 37px;
-	color: #ffffff;
-	background-color: rgba(0, 0, 0, 0.6);
-	width: 300px;
-	padding: 5px 0;
-	font-weight: 200;
-	font-size: 20px;
-}
-/* Css de la pagina de estadios.html */
-.seccion__estadios{
+  }
+  @media only screen and (max-width: 450px) {
+	.titulo__estadios {
+	  background-color: rgba(255, 255, 255, 0.4);
+	  margin-top: 24px;
+	  padding: 10px;
+	  font-size: 20px;
+	}
+  }
+  
+  .seccion__estadios {
 	padding: 50px;
 	display: grid;
 	grid-template-rows: repeat(8, 1fr);
 	grid-template-columns: repeat(1, 1fr);
 	column-gap: 90px;
-    row-gap: 10px;
+	row-gap: 10px;
 	margin: 50px;
 	background-color: rgba(0, 0, 0, 0.3);
 	border-radius: 30px;
-	
-}
-.titulo__estadios{
-	background-color: rgba(255, 255, 255, 0.4);
-	margin-top: 74px;
-	padding: 60px;
-	font-size: 40px;
-}
-.estadios{
+  }
+  .seccion__estadios .estadios {
 	padding-top: 20px;
-	position:relative;
-}
-.estadios__imagen{
+	position: relative;
+  }
+  .seccion__estadios .estadios .estadios__imagen {
 	width: 800px;
 	height: 400px;
-}
-.estadios__texto{
-	font-size: 20px;
-	border-radius: 10px;
-	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.3);
-}
-.estadios__titulo{
+  }
+  @media only screen and (max-width: 450px) {
+	.seccion__estadios .estadios .estadios__imagen {
+	  width: 100%;
+	  height: 150px;
+	  border-radius: 10px;
+	}
+  }
+  .seccion__estadios .estadios .estadios__titulo {
 	position: relative;
 	bottom: 37px;
 	color: #ffffff;
@@ -199,77 +133,300 @@ body{
 	padding: 5px 0;
 	font-weight: 200;
 	font-size: 20px;
-}
-@media only screen and (max-width:450px) {
-	.titulo__estadios{
-		background-color: rgba(255, 255, 255, 0.4);
-		margin-top: 24px;
-		padding: 10px;
-		font-size: 20px;
+  }
+  @media only screen and (max-width: 450px) {
+	.seccion__estadios .estadios .estadios__titulo {
+	  position: relative;
+	  bottom: 28px;
+	  color: #ffffff;
+	  background-color: rgba(0, 0, 0, 0.6);
+	  width: 100%;
+	  text-align: center;
+	  padding: 5px 0;
+	  font-size: 15px;
+	  border-radius: 10px;
 	}
-	.estadios{
-		padding-top: 10px;
+  }
+  .seccion__estadios .estadios .estadios__texto {
+	font-size: 20px;
+	border-radius: 10px;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.3);
+  }
+  @media only screen and (max-width: 450px) {
+	.seccion__estadios .estadios .estadios__texto {
+	  text-align: justify;
+	  font-size: 15px;
+	  border-radius: 10px;
+	  padding: 10px;
+	  background-color: rgba(255, 255, 255, 0.4);
 	}
-	.seccion__estadios{
-		padding: 15px;
-		column-gap: 90px;
-		margin: 10px;
+  }
+  @media only screen and (max-width: 450px) {
+	.seccion__estadios .estadios {
+	  padding-top: 10px;
 	}
-	.estadios__texto{
-		text-align: justify;
-		font-size: 15px;
-		border-radius: 10px;
-		padding: 10px;
-		background-color: rgba(255, 255, 255, 0.4);
+  }
+  @media only screen and (max-width: 450px) {
+	.seccion__estadios {
+	  padding: 15px;
+	  column-gap: 90px;
+	  margin: 10px;
 	}
-	.estadios__imagen{
-		width: 100%;
-		height: 150px;
-		border-radius: 10px;
+  }
+  
+  /* Css de la pagina formaciones.html */
+  main .seccion__formacion {
+	width: 98%;
+	padding: 20px;
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: repeat(3, 1fr);
+	column-gap: 10px;
+	row-gap: 20px;
+	margin: 10px;
+	background-color: rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+  }
+  @media only screen and (max-width: 450px) {
+	main .seccion__formacion {
+	  padding: 30px;
+	  padding-bottom: 90px;
+	  margin: 5px;
+	  display: grid;
+	  grid-template-rows: repeat(3, 1fr);
+	  grid-template-columns: repeat(1, 1fr);
 	}
-	.estadios__titulo{
-		position: relative;
-		bottom: 28px;
-		color: #ffffff;
-		background-color: rgba(0, 0, 0, 0.6);
-		width: 100%;
-		text-align: center;
-		padding: 5px 0;
-		font-size: 15px;
-		border-radius: 10px;
+  }
+  main .formacion {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 350px;
+	height: 450px;
+	margin: auto;
+	padding: 10px;
+	position: relative;
+	background-color: rgba(255, 255, 255, 0.1764705882);
+	border-radius: 5px;
+  }
+  main .formacion .formacion__jugadoreslogo {
+	bottom: 0px;
+	width: 150px;
+	height: 200px;
+  }
+  main .formacion .formacion__jugadores {
+	padding: 15px 0 0 0;
+	bottom: 0px;
+	width: 70%;
+	height: 350px;
+  }
+  @media only screen and (max-width: 450px) {
+	main .formacion .formacion__jugadores {
+	  width: 70%;
 	}
-}
-/* Css de la pagina de partidos.html */
-.partidos{
+  }
+  main .formacion .jugador__nombre {
+	position: relative;
+	bottom: 0px;
+	color: #ffffff;
+	background-color: rgba(0, 0, 0, 0.6);
+	height: 40px;
+	width: 70%;
+	font-weight: 200;
+	font-size: 20px;
+  }
+  @media only screen and (max-width: 450px) {
+	main .formacion .jugador__nombre {
+	  font-size: 15px;
+	  width: 70%;
+	}
+  }
+  
+  .formacion {
+	width: 1100px;
+	margin: 1px 125px;
+	border-radius: 50px;
+  }
+  
+  .formacion__texto {
+	margin: 110px 120px 30px 120px;
+	background-color: rgba(255, 255, 255, 0.4);
+	border-radius: 10px;
+	padding: 10px;
+	font-size: 40px;
+  }
+  
+  /*.seccion{
+	  padding: 20px;
+	  margin-top: 74px;
+	  display: grid;
+	  grid-template-rows: repeat(3, 1fr);
+	  grid-template-columns: repeat(3, 1fr);
+	  column-gap: 90px;
+	  row-gap: 10px;
+  }*/
+  .seccion__jugadores {
+	color: rgba(0, 0, 0, 0);
+	/*border: solid 2px #4F091D;
+	background-color: #97BFB4;
+	padding: 30px;
+	text-align: center;*/
+  }
+  
+  /* Css de la pagina indumentaria.html */
+  section .titulo__ropa {
+	background-color: rgba(255, 255, 255, 0.4);
+	margin-top: 74px;
+	padding: 60px;
+	font-size: 40px;
+  }
+  @media only screen and (max-width: 450px) {
+	section .titulo__ropa {
+	  font-size: 25px;
+	  padding: 20px;
+	}
+  }
+  section .seccion__indumentaria {
+	padding: 50px;
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
+	grid-template-columns: repeat(3, 1fr);
+	column-gap: 90px;
+	row-gap: 10px;
+	margin: 50px;
+	background-color: rgba(0, 0, 0, 0.3);
+	border-radius: 30px;
+  }
+  @media only screen and (max-width: 450px) {
+	section .seccion__indumentaria {
+	  padding: 30px;
+	  padding-bottom: 90px;
+	  margin: 5px;
+	  display: grid;
+	  grid-template-rows: repeat(4, 1fr);
+	  grid-template-columns: repeat(1, 1fr);
+	}
+  }
+  @media only screen and (max-width: 450px) {
+	section .seccion__indumentaria .fotolarga1 {
+	  display: none;
+	}
+  }
+  section .seccion__indumentaria .indumentaria {
+	position: relative;
+  }
+  section .seccion__indumentaria .indumentaria .indumentaria__imagen {
+	bottom: 0px;
+	width: 300px;
+  }
+  @media only screen and (max-width: 450px) {
+	section .seccion__indumentaria .indumentaria .indumentaria__imagen {
+	  width: 100%;
+	}
+  }
+  section .seccion__indumentaria .indumentaria .indumentaria__titulo {
+	position: relative;
+	bottom: 0px;
+	color: #ffffff;
+	background-color: rgba(0, 0, 0, 0.6);
+	width: 300px;
+	padding: 5px 0;
+	font-weight: 200;
+	font-size: 20px;
+  }
+  @media only screen and (max-width: 450px) {
+	section .seccion__indumentaria .indumentaria .indumentaria__titulo {
+	  font-size: 15px;
+	  width: 100%;
+	}
+  }
+  @media only screen and (max-width: 450px) {
+	section .seccion__indumentaria .indumentaria {
+	  height: 280px;
+	  padding: 10px;
+	}
+  }
+  
+  /* Css de la pagina de partidos.html */
+  .partidos {
 	padding: 70px;
 	display: flex;
 	flex-direction: column;
 	margin-top: 50px;
-	justify-content:space-around;
-}
-.partidos__imagen{
+	justify-content: space-around;
+  }
+  
+  .partidos__imagen {
 	margin-top: 30px;
 	width: 900px;
-}
-/*footer*/
-footer{
+  }
+  
+  /*Reseteo de html*/
+  * {
+	margin: 0;
+	padding: 0;
+  }
+  
+  /*Header*/
+  header .nav__imagen {
+	width: 74px;
+	height: 50px;
+	margin-right: 10px;
+  }
+  @media only screen and (max-width: 450px) {
+	header .nav-link:hover {
+	  color: black;
+	}
+  }
+  header .nav__imagen {
+	width: 74px;
+	height: 50px;
+	margin-right: 10px;
+  }
+  @media only screen and (max-width: 450px) {
+	header .nav__imagen {
+	  display: none;
+	}
+  }
+  
+  /*footer*/
+  footer {
 	width: 2000;
 	height: 150px;
-	background-color:black;
+	background-color: black;
 	margin-top: 100px;
 	color: rgb(255, 255, 255);
-  	display: flex;
+	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
 	position: relative;
 	bottom: 0px;
-}
-.footer__imagen{
+  }
+  footer .footer__imagen {
 	width: 90px;
 	height: 95px;
-}
-.footer__lista{
+  }
+  footer .footer__lista {
 	text-decoration: none;
 	color: white;
-}
+  }
+  @media only screen and (max-width: 450px) {
+	footer {
+	  margin-top: 60px;
+	}
+  }
+  
+  /*linea*/
+  .linea {
+	border-top: 1px solid rgb(0, 0, 0);
+	height: 2px;
+	max-width: 90%;
+	padding: 0;
+	margin: 50px auto 0 auto;
+  }
+  
+  /*# sourceMappingURL=style.css.map */
+  
