--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,278 +1,7 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-body{
-	background-image: radial-gradient(circle at 120.71% 50%, #feffff 0, #b5c9f2 50%, #6495dd 100%);
-}
-.linea{
-	border-top: 1px solid rgb(0, 0, 0);
-    height: 2px;
-    max-width: 90%;
-    padding: 0;
-    margin: 50px auto 0 auto;
-}
-.nav__imagen{
-	width: 74px;
-	height: 50px;
-	margin-right: 10px;
-}_
-/*--------------------Fin del header--------------------*/
-.articulo{
-	padding-top: 30px;
-	padding-right: 74px;
-	padding-left: 74px;
-	border-radius: 10px;
-}
-.articulo__titulo{
-	margin: 30px 40px 0 40px;
-	padding: 10px;
-	display: inline-block;
-	border-radius: 10px;
-	margin-bottom: 40px;
-	background-color: rgba(255, 255, 255, 0.4);
-}
-.titulo{
-	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-	font-size: 30px;
-}
-.articulo__equipo{
-	padding: 0 20px 0 20px;
-	display: flex;
-	flex-direction: column;
-}
-.articulo__imagen{
-	border-radius: 20px ;
-	width: auto;
-	margin-top:40px ;
-	margin-bottom: 40px;
-}
-.articulo__texto{
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	font-size: 20px;
-	text-align: justify;
-	border-radius: 5px;
-	background-color: rgba(0, 0, 0, 0.1);
-	padding: 30px;
-}
-@media only screen and (max-width:450px) {
-	.nav-link:hover{
-		color: black;
-	}
-    .articulo__equipo{
-        padding: 0 10px 0 10px;
-    }
-	.articulo{
-		border-radius: 10px;
-		padding-top: 0px;
-		padding-bottom: 15px;
-		background-color: #6495dd;
-	}
-	.titulo{
-		font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-		font-size: 21px;
-	}
-	
-	.articulo__titulo{
-		background-color: rgba(255, 255, 255, 0.7);
-		margin-top: 20px;
-		margin-bottom: 15px;
-		font-size: 15px;
-	}
-	.articulo__imagen{
-		margin-top: 15px;
-		margin-bottom: 15px;
-	}
-	.articulo__texto{
-		background-color: rgba(0, 0, 0, 0.05);
-		text-align: justify;
-		font-size: 14px;
-		padding: 10px;
-	}
-	.nav__imagen{
-		display: none;
-	}
-}
-/* Css de la pagina formaciones.html */
-.formacion{
-	width: 1100px;
-	margin:1px 125px;
-	border-radius: 50px;
-}
-.formacion__texto{
-	margin: 110px 120px 30px 120px;
-	background-color:rgba(255, 255, 255, 0.4);
-	border-radius: 10px;
-	padding: 10px;
-	font-size: 40px;
-}
-/*.seccion{
-	padding: 20px;
-	margin-top: 74px;
-	display: grid;
-	grid-template-rows: repeat(3, 1fr);
-	grid-template-columns: repeat(3, 1fr);
-	column-gap: 90px;
-    row-gap: 10px;
-}*/
-.seccion__jugadores {
-	color: rgba(0, 0, 0, 0);
-    /*border: solid 2px #4F091D;
-    background-color: #97BFB4;
-    padding: 30px;
-    text-align: center;*/
-}
 
-/* Css de la pagina indumentaria.html */
-.seccion__indumentaria{
-	padding: 50px;
-	display: grid;
-	grid-template-rows: repeat(2, 1fr);
-	grid-template-columns: repeat(3, 1fr);
-	column-gap: 90px;
-    row-gap: 10px;
-	margin: 50px;
-	background-color: rgba(0, 0, 0, 0.3);
-	border-radius: 30px;
-}
-.titulo__ropa{
-	background-color: rgba(255, 255, 255, 0.4);
-	margin-top: 74px;
-	padding: 60px;
-	font-size: 40px;
-}
-.indumentaria{
-	position:relative;
-}
-.indumentaria__imagen{
-	width: 300px;
-}
-.julian{
-	height: 350px;
-}
-.indumentaria__titulo{
-	position: relative;
-	bottom: 37px;
-	color: #ffffff;
-	background-color: rgba(0, 0, 0, 0.6);
-	width: 300px;
-	padding: 5px 0;
-	font-weight: 200;
-	font-size: 20px;
-}
-/* Css de la pagina de estadios.html */
-.seccion__estadios{
-	padding: 50px;
-	display: grid;
-	grid-template-rows: repeat(8, 1fr);
-	grid-template-columns: repeat(1, 1fr);
-	column-gap: 90px;
-    row-gap: 10px;
-	margin: 50px;
-	background-color: rgba(0, 0, 0, 0.3);
-	border-radius: 30px;
-	
-}
-.titulo__estadios{
-	background-color: rgba(255, 255, 255, 0.4);
-	margin-top: 74px;
-	padding: 60px;
-	font-size: 40px;
-}
-.estadios{
-	padding-top: 20px;
-	position:relative;
-}
-.estadios__imagen{
-	width: 800px;
-	height: 400px;
-}
-.estadios__texto{
-	font-size: 20px;
-	border-radius: 10px;
-	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.3);
-}
-.estadios__titulo{
-	position: relative;
-	bottom: 37px;
-	color: #ffffff;
-	background-color: rgba(0, 0, 0, 0.6);
-	width: 800px;
-	padding: 5px 0;
-	font-weight: 200;
-	font-size: 20px;
-}
-@media only screen and (max-width:450px) {
-	.titulo__estadios{
-		background-color: rgba(255, 255, 255, 0.4);
-		margin-top: 24px;
-		padding: 10px;
-		font-size: 20px;
-	}
-	.estadios{
-		padding-top: 10px;
-	}
-	.seccion__estadios{
-		padding: 15px;
-		column-gap: 90px;
-		margin: 10px;
-	}
-	.estadios__texto{
-		text-align: justify;
-		font-size: 15px;
-		border-radius: 10px;
-		padding: 10px;
-		background-color: rgba(255, 255, 255, 0.4);
-	}
-	.estadios__imagen{
-		width: 100%;
-		height: 150px;
-		border-radius: 10px;
-	}
-	.estadios__titulo{
-		position: relative;
-		bottom: 28px;
-		color: #ffffff;
-		background-color: rgba(0, 0, 0, 0.6);
-		width: 100%;
-		text-align: center;
-		padding: 5px 0;
-		font-size: 15px;
-		border-radius: 10px;
-	}
-}
-/* Css de la pagina de partidos.html */
-.partidos{
-	padding: 70px;
-	display: flex;
-	flex-direction: column;
-	margin-top: 50px;
-	justify-content:space-around;
-}
-.partidos__imagen{
-	margin-top: 30px;
-	width: 900px;
-}
-/*footer*/
-footer{
-	width: 2000;
-	height: 150px;
-	background-color:black;
-	margin-top: 100px;
-	color: rgb(255, 255, 255);
-  	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-	position: relative;
-	bottom: 0px;
-}
-.footer__imagen{
-	width: 90px;
-	height: 95px;
-}
-.footer__lista{
-	text-decoration: none;
-	color: white;
-}
+@import 'componentes/page-1';
+@import 'componentes/page-2';
+@import 'componentes/page-3';
+@import 'componentes/page-4';
+@import 'componentes/page-5';
+@import 'base/codigo-comunitario';
